[package]
name = "gannot"
description = """Gannot is a small library with limited functionality\
                focused on genome annotation."""
readme = "README.md"
version = "0.0.1"
authors = ["Garth Ilsley"]
license = "MIT OR Apache-2.0"
rust-version = "1.83"
edition = "2021"
repository = "https://github.com/gannot/gannot"

[dependencies]
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive" ] }
indexmap = { version = "2.7.0", features = ["serde"] }
num-traits = "0.2.18"
