[package]
name = "gannot"
version = "0.1.0"
description = """A small library with limited functionality \
                focused on genome annotation."""
readme = "README.md"
authors = ["Garth Ilsley"]
license = "MIT OR Apache-2.0"
rust-version = "1.83"
edition = "2021"
repository = "https://github.com/gannot/gannot"

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive" ] }
indexmap = { version = "2.7.1", features = ["serde"] }
num-traits = "0.2.19"
